# pytorch

./: .lintrunner.toml  CLAUDE.md  build_variables.bzl
.ci/pytorch/: test.sh
.github/: merge_rules.yaml
.github/ci_commit_pins/: torchtitan.txt  vision.txt
.github/workflows/: apply-lint.yml  claude-issue-triage-run.yml  generated-linux-binary-manywheel-nightly.yml  trunk.yml
c10/util/: Exception.h
caffe2/: CMakeLists.txt
scripts/bugbash/: analyze_issues.py  fetch_pt2_priority_issues.sh
test/: run_test.py  slow_tests.json  test_cuda.py  test_dynamic_shapes.py  test_fake_tensor.py  test_indexing.py  test_linalg.py  test_mps.py  test_nn.py  test_opaque_obj_v2.py  test_transformers.py  test_varlen_attention.py  test_xpu.py
test/cpp/profiler/: CMakeLists.txt  test_privateuse1_profiler.cpp
test/distributed/: test_c10d_common.py  test_c10d_nccl.py  test_dynamo_distributed.py  test_inductor_collectives.py  test_local_tensor.py
test/dynamo/: test_activation_checkpointing.py  test_aot_autograd_cache.py  test_decorators.py  test_dicts.py  test_dynamo_decompositions.py  test_error_messages.py  test_misc.py  test_modes.py  test_modules.py  test_repros.py  test_subclasses.py
test/export/: test_export.py
test/functorch/: test_aotdispatch.py  test_control_flow.py
test/inductor/: test_aot_inductor.py  test_compiled_optimizers.py  test_cpu_repro.py  test_cudagraph_trees.py  test_dropout_align_random_eager.py  test_fp8.py  test_fused_attention.py  test_mix_order_reduction.py  test_pallas.py  test_pattern_matcher.py  (+4 more)
torch/: _meta_registrations.py  library.py
(+107 files in other folders)
